--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ h3,
 
 h4,
 .h4 {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 h5,
@@ -63,7 +63,7 @@ h5,
 .h5,
 h6,
 .h6 {
-    color: #f5f3f3;
+    color: #222222;
     line-height: 1.3;
 }
 
@@ -130,11 +130,10 @@ li {
 
 .row{
 
-    margin: 30px;
+  margin-top: -20px;
     display: flex;
-    flex-wrap: wrap;
     flex-direction: row-reverse;
-    justify-content: center
+    flex-wrap: wrap;
 }
 
 
@@ -1137,10 +1136,6 @@ a.text-black-400:hover {
 
 .p-15 {
     padding: 15px;
-    background: linear-gradient(82.46deg, #272428 1.21%, #504a54 97.93%);
-    border-radius: 10px;
-    margin: 10px;
-    
 }
 
 .pt-15 {
